# ankush.dev

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  compose.yml  deploy.sh
.github/workflows/: build.yml  ci.yml
content/posts/: cpu-bound-or-io-bound.md  debugging-already-fixed-multithreading-bug.md  distractions.md  engineering-tooling.md  flamegraph-missing-forest-for-trees.md  frappe-deep-dive.md  frappe-memory.md  frappe-mysql-talk.md  frappe-perf-talk-2022.md  frappe-scheduler.md  glorious-past.md  mastery-cycling-mental-health.md  mediocre-internship.md  microbenchmarking-considered-useful.md  microbenchmarking-is-fine.md  neumann_architecture.md  race-condition-strikes-back.md  reliable-benchmarking.md  semgrep.md  shell-tools-speed.md  tip-concurrency-schedule.md  vim-notetaking-workflow.md
src/: main.rs
src/templates/: feed.xml  hljs.html  home.html  home.jinja  layout.html  layout.jinja  pageview.js  post.html  post.jinja  style.css
