[package]
name = "ankush_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
chrono = { version = "0.4.38", features = ["serde"] }
markdown = "1.0.0-alpha.17"
minijinja = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37", features = ["full"] }
